k8s/gigra-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker/docker-compose.yaml
    kompose.version: 1.11.0 (39ad614)
  creationTimestamp: null
  labels:
    io.kompose.service: gigra
  name: gigra
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: gigra
    spec:
      containers:
      - image: xetys/gigra-refact:1.0
        name: gigra-srv
        command:
          - /bin/bash
          - -c
          - chmod -R 777 /var/www/html/tmp && (memcached & apache2-foreground)
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /var/www/html/core/configs/config.php
          subPath: config.php
      restartPolicy: Always
      volumes:
      - name: config
        configMap:
          name: gigra-config
status: {}
