k8s/sendmail.yaml
apiVersion: v1
kind: Service
metadata:
  name: sendmail
spec:
  ports:
  - port: 25
    protocol: TCP
    targetPort: 25
  selector:
    run: sendmail
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: sendmail
  name: sendmail
spec:
  replicas: 1
  selector:
    matchLabels:
      run: sendmail
  strategy: {}
  template:
    metadata:
      labels:
        run: sendmail
    spec:
      containers:
      - env:
        - name: MAILNAME
          value: gigra.stytex.cloud
        image: namshi/smtp
        name: sendmail
        ports:
        - containerPort: 25
        resources: {}
status: {}
