k8s/gigra-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: gigra
spec:
  rules:
    - host: uni1.gigra-game.de
      http:
        paths:
          - backend:
              serviceName: gigra
              servicePort: 80
            path: /
